--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@ html {
   }
 
   .pokedex-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
       width: 300px;
       height: 600px;
       background-color: darkred;
@@ -51,14 +55,21 @@ html {
 
   .pokedex-list__item {
       display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: center;
+      flex-direction: column;
       width: 100%;
-      height: 70px;
+      height: auto;
       background-color: white;
       border-radius: 10px;
       padding: 10px;
+  }
+
+  .pokedex-list__row {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: top;
+    justify-content: space-between;
+
   }
 
   .pokedex-list__item:not(:first-child) {
