--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,22 +1,27 @@
 html {
   box-sizing: border-box;
-  font-size: 16px; }
+  font-size: 16px;
+}
 
 *, *:before, *:after {
-  box-sizing: inherit; }
+  box-sizing: inherit;
+}
 
 body, h1, h2, h3, h4, h5, h6, p, ol, ul {
   margin: 0;
   padding: 0;
   font-weight: normal;
-  font-family: Arial, Helvetica, sans-serif; }
+  font-family: Arial, Helvetica, sans-serif;
+}
 
 ol, ul {
-  list-style: none; }
+  list-style: none;
+}
 
 img {
   max-width: 100%;
-  height: auto; }
+  height: auto;
+}
 
 main {
   position: relative;
@@ -25,9 +30,10 @@ main {
   justify-content: center;
   width: 100vw;
   height: 100vh;
-  background-color: darkslategrey; }
+  background-color: darkslategrey;
+}
 
-.pokedex-container {
+.container {
   position: relative;
   display: flex;
   flex-direction: column;
@@ -35,21 +41,23 @@ main {
   align-items: center;
   width: 300px;
   height: 600px;
-  background: lightseagreen; }
-  .pokedex-container::after {
-    content: "";
-    position: absolute;
-    width: 300px;
-    height: 600px;
-    top: 0;
-    left: 0;
-    background: url("../img/pokeball.png");
-    background-position: left top -70px;
-    background-size: 500px;
-    background-repeat: no-repeat;
-    opacity: .1; }
+  background: lightseagreen;
+}
+.container::after {
+  content: "";
+  position: absolute;
+  width: 300px;
+  height: 600px;
+  top: 0;
+  left: 0;
+  background: url("../img/pokeball.png");
+  background-position: left top -70px;
+  background-size: 500px;
+  background-repeat: no-repeat;
+  opacity: 0.1;
+}
 
-.pokedex-list {
+.card {
   position: relative;
   display: flex;
   align-items: flex-end;
@@ -57,9 +65,10 @@ main {
   height: 100%;
   overflow-x: hidden;
   overflow-y: scroll;
-  z-index: 999; }
+  z-index: 999;
+}
 
-.pokedex-list__item {
+.card__body {
   display: flex;
   flex-direction: column;
   height: 80%;
@@ -67,29 +76,30 @@ main {
   background-color: white;
   border-radius: 15px 15px 0 0;
   padding: 10px;
-  box-shadow: 0 0 50px rgba(0, 0, 0, 0.2); }
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.2);
+}
 
-.pokedex-list__row {
+.pokemon-header {
   position: relative;
   width: 100%;
   height: 60px;
   display: flex;
   flex-direction: row;
   align-items: top;
-  justify-content: space-between; }
+  justify-content: space-between;
+}
 
-.pokedex-list__item:not(:first-child) {
-  margin-top: 15px; }
-
-.pokemon-title {
-  font-size: .8rem;
+.title {
+  font-size: 0.8rem;
   font-weight: bold;
-  color: grey; }
+  color: grey;
+}
 
-.pokemon-name {
-  font-weight: bold; }
+.name {
+  font-weight: bold;
+}
 
-.pokemon-img {
+.img {
   position: absolute;
   top: -50px;
   left: 50%;
@@ -99,7 +109,8 @@ main {
   background-color: white;
   border-radius: 10px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-  overflow: hidden; }
+  overflow: hidden;
+}
 
 .btn {
   position: absolute;
@@ -112,94 +123,116 @@ main {
   font-size: 1rem;
   border-radius: 20px;
   cursor: pointer;
-  transition: all .2s;
+  transition: all 0.2s;
   outline: none;
-  z-index: 999; }
+  z-index: 999;
+}
 
 .btn:hover {
   background-color: silver;
-  color: white; }
+  color: white;
+}
 
 .type {
   display: inline-block;
   padding: 5px 10px;
   border: 1px solid;
   border-radius: 15px;
-  font-size: .6rem;
-  text-transform: uppercase; }
-  .type:not(:last-child) {
-    margin-right: 5px; }
-  .type.grass {
-    background: honeydew;
-    color: darkgreen;
-    border-color: darkgreen; }
-  .type.poison {
-    background: lavender;
-    color: purple;
-    border-color: purple; }
-  .type.fire {
-    background: lightyellow;
-    color: orangered;
-    border-color: orangered; }
-  .type.flying {
-    background: azure;
-    color: navy;
-    border-color: navy; }
-  .type.water {
-    background: azure;
-    color: mediumblue;
-    border-color: mediumblue; }
-  .type.normal {
-    background: seashell;
-    color: saddlebrown;
-    border-color: saddlebrown; }
-  .type.electric {
-    background: ivory;
-    color: darkorange;
-    border-color: darkorange; }
-  .type.ice {
-    background: azure;
-    color: navy;
-    border-color: navy; }
-  .type.fighting {
-    background: mistyrose;
-    color: crimson;
-    border-color: crimson; }
-  .type.ground {
-    background: ghostwhite;
-    color: sienna;
-    border-color: sienna; }
-  .type.psychic {
-    background: floralwhite;
-    color: deeppink;
-    border-color: deeppink; }
-  .type.bug {
-    background: mintcream;
-    color: darkolivegreen;
-    border-color: darkolivegreen; }
-  .type.rock {
-    background: whitesmoke;
-    color: dimgrey;
-    border-color: dimgrey; }
-  .type.ghost {
-    background: aliceblue;
-    color: darkcyan;
-    border-color: darkcyan; }
-  .type.dragon {
-    background: lightcyan;
-    color: indigo;
-    border-color: indigo; }
-  .type.dark {
-    background: lavenderblush;
-    color: firebrick;
-    border-color: firebrick; }
-  .type.steel {
-    background: snow;
-    color: steelblue;
-    border-color: steelblue; }
-  .type.fairy {
-    background: oldlace;
-    color: magenta;
-    border-color: magenta; }
+  font-size: 0.6rem;
+  text-transform: uppercase;
+}
+.type:not(:last-child) {
+  margin-right: 5px;
+}
+.type.grass {
+  background: honeydew;
+  color: darkgreen;
+  border-color: darkgreen;
+}
+.type.poison {
+  background: lavender;
+  color: purple;
+  border-color: purple;
+}
+.type.fire {
+  background: lightyellow;
+  color: orangered;
+  border-color: orangered;
+}
+.type.flying {
+  background: azure;
+  color: navy;
+  border-color: navy;
+}
+.type.water {
+  background: azure;
+  color: mediumblue;
+  border-color: mediumblue;
+}
+.type.normal {
+  background: seashell;
+  color: saddlebrown;
+  border-color: saddlebrown;
+}
+.type.electric {
+  background: ivory;
+  color: darkorange;
+  border-color: darkorange;
+}
+.type.ice {
+  background: azure;
+  color: navy;
+  border-color: navy;
+}
+.type.fighting {
+  background: mistyrose;
+  color: crimson;
+  border-color: crimson;
+}
+.type.ground {
+  background: ghostwhite;
+  color: sienna;
+  border-color: sienna;
+}
+.type.psychic {
+  background: floralwhite;
+  color: deeppink;
+  border-color: deeppink;
+}
+.type.bug {
+  background: mintcream;
+  color: darkolivegreen;
+  border-color: darkolivegreen;
+}
+.type.rock {
+  background: whitesmoke;
+  color: dimgrey;
+  border-color: dimgrey;
+}
+.type.ghost {
+  background: aliceblue;
+  color: darkcyan;
+  border-color: darkcyan;
+}
+.type.dragon {
+  background: lightcyan;
+  color: indigo;
+  border-color: indigo;
+}
+.type.dark {
+  background: lavenderblush;
+  color: firebrick;
+  border-color: firebrick;
+}
+.type.steel {
+  background: snow;
+  color: steelblue;
+  border-color: steelblue;
+}
+.type.fairy {
+  background: oldlace;
+  color: magenta;
+  border-color: magenta;
+}
 
 /*# sourceMappingURL=styles.css.map */
