--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -189,3 +189,16 @@ main {
     width: 100%;
   }
 }
+
+.loader {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: url('../img/pokeball.png');
+  background-position: center;
+  background-size: 100px;
+  background-repeat: no-repeat;
+  z-index: 999;
+}
