--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -194,11 +194,8 @@ main {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
-  background: url('../img/pokeball.png');
-  background-position: center;
-  background-size: 100px;
-  background-repeat: no-repeat;
-  z-index: 999;
+  width: 300px;
+  height: 600px;
+  background: grey;
+  z-index: 999999;
 }
