--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,27 +1,22 @@
 html {
   box-sizing: border-box;
-  font-size: 16px;
-}
+  font-size: 16px; }
 
 *, *:before, *:after {
-  box-sizing: inherit;
-}
+  box-sizing: inherit; }
 
 body, h1, h2, h3, h4, h5, h6, p, ol, ul {
   margin: 0;
   padding: 0;
   font-weight: normal;
-  font-family: Arial, Helvetica, sans-serif;
-}
+  font-family: Arial, Helvetica, sans-serif; }
 
 ol, ul {
-  list-style: none;
-}
+  list-style: none; }
 
 img {
   max-width: 100%;
-  height: auto;
-}
+  height: auto; }
 
 main {
   position: relative;
@@ -30,8 +25,7 @@ main {
   justify-content: center;
   width: 100vw;
   height: 100vh;
-  background-color: darkgray;
-}
+  background-color: darkgray; }
 
 .container {
   position: relative;
@@ -42,33 +36,27 @@ main {
   width: 300px;
   height: 600px;
   background: lightgrey;
-  box-shadow: 0 0 50px rgba(0, 0, 0, 0.1);
-}
-@media screen and (max-width: 600px) {
-  .container {
-    width: 100%;
-    height: 100%;
-  }
-}
-.container::after {
-  content: "";
-  position: absolute;
-  width: 300px;
-  height: 600px;
-  top: 0;
-  left: 0;
-  background: url("../img/pokeball.png");
-  background-position: left top;
-  background-size: 180px;
-  background-repeat: no-repeat;
-  opacity: 0.1;
-}
-@media screen and (max-width: 600px) {
-  .container {
-    width: 100%;
-    height: 100%;
-  }
-}
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.1); }
+  @media screen and (max-width: 600px) {
+    .container {
+      width: 100%;
+      height: 100%; } }
+  .container::after {
+    content: '';
+    position: absolute;
+    width: 300px;
+    height: 600px;
+    top: 0;
+    left: 0;
+    background: url("../img/pokeball.png");
+    background-position: left top;
+    background-size: 180px;
+    background-repeat: no-repeat;
+    opacity: 0.1; }
+  @media screen and (max-width: 600px) {
+    .container {
+      width: 100%;
+      height: 100%; } }
 
 .pokeball {
   position: absolute;
@@ -76,8 +64,7 @@ main {
   right: 10px;
   width: 40px;
   filter: invert(1);
-  opacity: 0.7;
-}
+  opacity: 0.7; }
 
 .card {
   position: relative;
@@ -87,8 +74,7 @@ main {
   height: 100%;
   overflow-x: hidden;
   overflow-y: scroll;
-  z-index: 999;
-}
+  z-index: 999; }
 
 .card__body {
   position: relative;
@@ -98,37 +84,33 @@ main {
   width: 100%;
   background-color: white;
   border-radius: 15px 15px 0 0;
-  box-shadow: 0 0 50px rgba(0, 0, 0, 0.2);
-}
-.card__body::after {
-  content: "";
-  position: absolute;
-  top: -50px;
-  left: 20px;
-  height: 90px;
-  width: 90px;
-  background-color: white;
-  border-radius: 10px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-  overflow: hidden;
-  z-index: 1;
-}
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.2); }
+  .card__body::after {
+    content: '';
+    position: absolute;
+    top: -50px;
+    left: 20px;
+    height: 90px;
+    width: 90px;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    z-index: 1; }
 
 .pokemon-header {
   position: relative;
   width: 100%;
-  height: 60px;
+  height: 100%;
   display: flex;
   flex-direction: row;
   align-items: top;
-  justify-content: space-between;
-}
+  justify-content: space-between; }
 
 .title {
   font-size: 0.8rem;
   font-weight: bold;
-  color: grey;
-}
+  color: grey; }
 
 .name {
   position: absolute;
@@ -136,8 +118,7 @@ main {
   right: 20px;
   font-weight: bold;
   font-size: 1.1em;
-  color: white;
-}
+  color: white; }
 
 .img {
   position: absolute;
@@ -149,14 +130,12 @@ main {
   border-radius: 10px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
   overflow: hidden;
-  z-index: 2;
-}
+  z-index: 2; }
 
 .pokemon-types {
   position: absolute;
   top: 15px;
-  right: 15px;
-}
+  right: 15px; }
 
 .progress-wrapper {
   position: absolute;
@@ -164,50 +143,53 @@ main {
   left: 0;
   left: 50%;
   transform: translateX(-50%);
-  width: 100%;
-}
+  width: 100%; }
 
 .progress-bar {
   display: block;
   width: 90%;
   margin: 0 auto;
-  margin-top: 0.5rem;
-}
-.progress-bar:first-child {
-  margin-top: 0;
-}
-.progress-bar__outer {
-  position: relative;
-  width: 100%;
-  height: 10px;
-  border-radius: 10px;
-  background-color: lightgrey;
-  overflow: hidden;
-}
-.progress-bar__inner {
-  height: 100%;
-}
-.progress-bar__inner-fill {
-  height: 100%;
-  background-color: green;
-  animation: progressBar 1s cubic-bezier(0.19, 1, 0.22, 1) forwards;
-}
-.progress-bar__title {
-  font-size: 0.9rem;
-  margin-bottom: 0.3rem;
-}
-.progress-bar__stat {
-  font-weight: bold;
-}
+  margin-top: 0.5rem; }
+  .progress-bar:first-child {
+    margin-top: 0; }
+  .progress-bar__outer {
+    position: relative;
+    width: 100%;
+    height: 10px;
+    border-radius: 10px;
+    background-color: lightgrey;
+    overflow: hidden; }
+  .progress-bar__inner {
+    height: 100%; }
+    .progress-bar__inner-fill {
+      height: 100%;
+      background-color: green;
+      animation: progressBar 1s cubic-bezier(0.19, 1, 0.22, 1) forwards; }
+  .progress-bar__title {
+    font-size: 0.9rem;
+    margin-bottom: 0.3rem; }
+  .progress-bar__stat {
+    font-weight: bold; }
 
 @keyframes progressBar {
   0% {
-    width: 0;
-  }
+    width: 0; }
   100% {
-    width: 100%;
-  }
-}
+    width: 100%; } }
+.loader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80px;
+  height: 80px;
+  background: transparent;
+  z-index: 9999;
+  animation: spin 1s linear infinite; }
+
+@keyframes spin {
+  100% {
+    transform: translate(-50%, -50%), rotate(360); } }
 .btn {
   position: absolute;
   bottom: 20px;
@@ -221,74 +203,52 @@ main {
   cursor: pointer;
   transition: all 0.2s;
   outline: none;
-  z-index: 999;
-}
-.btn--previous {
-  left: 20px;
-}
-.btn--next {
-  right: 20px;
-}
+  z-index: 999; }
+  .btn--previous {
+    left: 20px; }
+  .btn--next {
+    right: 20px; }
 
 .btn:hover {
   background-color: silver;
-  color: white;
-}
+  color: white; }
 
 .bg.grass {
-  background-color: darkgreen;
-}
+  background-color: darkgreen; }
 .bg.poison {
-  background-color: purple;
-}
+  background-color: purple; }
 .bg.fire {
-  background-color: orangered;
-}
+  background-color: orangered; }
 .bg.flying {
-  background-color: navy;
-}
+  background-color: navy; }
 .bg.water {
-  background-color: mediumblue;
-}
+  background-color: mediumblue; }
 .bg.normal {
-  background-color: saddlebrown;
-}
+  background-color: saddlebrown; }
 .bg.electric {
-  background-color: darkorange;
-}
+  background-color: darkorange; }
 .bg.ice {
-  background-color: navy;
-}
+  background-color: navy; }
 .bg.fighting {
-  background-color: crimson;
-}
+  background-color: crimson; }
 .bg.ground {
-  background-color: sienna;
-}
+  background-color: sienna; }
 .bg.psychic {
-  background-color: deeppink;
-}
+  background-color: deeppink; }
 .bg.bug {
-  background-color: darkolivegreen;
-}
+  background-color: darkolivegreen; }
 .bg.rock {
-  background-color: dimgrey;
-}
+  background-color: dimgrey; }
 .bg.ghost {
-  background-color: darkcyan;
-}
+  background-color: darkcyan; }
 .bg.dragon {
-  background-color: indigo;
-}
+  background-color: indigo; }
 .bg.dark {
-  background-color: firebrick;
-}
+  background-color: firebrick; }
 .bg.steel {
-  background-color: steelblue;
-}
+  background-color: steelblue; }
 .bg.fairy {
-  background-color: magenta;
-}
+  background-color: magenta; }
 
 .type {
   display: inline-block;
@@ -296,100 +256,80 @@ main {
   border: 1px solid;
   border-radius: 15px;
   font-size: 0.6rem;
-  text-transform: uppercase;
-}
-.type:not(:last-child) {
-  margin-right: 5px;
-}
-.type.grass {
-  background: honeydew;
-  color: darkgreen;
-  border-color: darkgreen;
-}
-.type.poison {
-  background: lavender;
-  color: purple;
-  border-color: purple;
-}
-.type.fire {
-  background: lightyellow;
-  color: orangered;
-  border-color: orangered;
-}
-.type.flying {
-  background: azure;
-  color: navy;
-  border-color: navy;
-}
-.type.water {
-  background: azure;
-  color: mediumblue;
-  border-color: mediumblue;
-}
-.type.normal {
-  background: seashell;
-  color: saddlebrown;
-  border-color: saddlebrown;
-}
-.type.electric {
-  background: ivory;
-  color: darkorange;
-  border-color: darkorange;
-}
-.type.ice {
-  background: azure;
-  color: navy;
-  border-color: navy;
-}
-.type.fighting {
-  background: mistyrose;
-  color: crimson;
-  border-color: crimson;
-}
-.type.ground {
-  background: ghostwhite;
-  color: sienna;
-  border-color: sienna;
-}
-.type.psychic {
-  background: floralwhite;
-  color: deeppink;
-  border-color: deeppink;
-}
-.type.bug {
-  background: mintcream;
-  color: darkolivegreen;
-  border-color: darkolivegreen;
-}
-.type.rock {
-  background: whitesmoke;
-  color: dimgrey;
-  border-color: dimgrey;
-}
-.type.ghost {
-  background: aliceblue;
-  color: darkcyan;
-  border-color: darkcyan;
-}
-.type.dragon {
-  background: lightcyan;
-  color: indigo;
-  border-color: indigo;
-}
-.type.dark {
-  background: lavenderblush;
-  color: firebrick;
-  border-color: firebrick;
-}
-.type.steel {
-  background: snow;
-  color: steelblue;
-  border-color: steelblue;
-}
-.type.fairy {
-  background: oldlace;
-  color: magenta;
-  border-color: magenta;
-}
+  text-transform: uppercase; }
+  .type:not(:last-child) {
+    margin-right: 5px; }
+  .type.grass {
+    background: honeydew;
+    color: darkgreen;
+    border-color: darkgreen; }
+  .type.poison {
+    background: lavender;
+    color: purple;
+    border-color: purple; }
+  .type.fire {
+    background: lightyellow;
+    color: orangered;
+    border-color: orangered; }
+  .type.flying {
+    background: azure;
+    color: navy;
+    border-color: navy; }
+  .type.water {
+    background: azure;
+    color: mediumblue;
+    border-color: mediumblue; }
+  .type.normal {
+    background: seashell;
+    color: saddlebrown;
+    border-color: saddlebrown; }
+  .type.electric {
+    background: ivory;
+    color: darkorange;
+    border-color: darkorange; }
+  .type.ice {
+    background: azure;
+    color: navy;
+    border-color: navy; }
+  .type.fighting {
+    background: mistyrose;
+    color: crimson;
+    border-color: crimson; }
+  .type.ground {
+    background: ghostwhite;
+    color: sienna;
+    border-color: sienna; }
+  .type.psychic {
+    background: floralwhite;
+    color: deeppink;
+    border-color: deeppink; }
+  .type.bug {
+    background: mintcream;
+    color: darkolivegreen;
+    border-color: darkolivegreen; }
+  .type.rock {
+    background: whitesmoke;
+    color: dimgrey;
+    border-color: dimgrey; }
+  .type.ghost {
+    background: aliceblue;
+    color: darkcyan;
+    border-color: darkcyan; }
+  .type.dragon {
+    background: lightcyan;
+    color: indigo;
+    border-color: indigo; }
+  .type.dark {
+    background: lavenderblush;
+    color: firebrick;
+    border-color: firebrick; }
+  .type.steel {
+    background: snow;
+    color: steelblue;
+    border-color: steelblue; }
+  .type.fairy {
+    background: oldlace;
+    color: magenta;
+    border-color: magenta; }
 
 /*# sourceMappingURL=styles.css.map */
