--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -92,7 +92,7 @@ main {
 .pokemon-header {
   position: relative;
   width: 100%;
-  height: 60px;
+  height: 100%;
   display: flex;
   flex-direction: row;
   align-items: top;
@@ -192,10 +192,18 @@ main {
 
 .loader {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 300px;
-  height: 600px;
-  background: grey;
-  z-index: 999999;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80px;
+  height: 80px;
+  background: transparent;
+  z-index: 9999;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  100% {
+    transform: translate(-50%, -50%), rotate(360);
+  }
 }
