--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -190,20 +190,25 @@ main {
   }
 }
 
-.loader {
+.loader-wrapper {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 80px;
   height: 80px;
-  background: transparent;
   z-index: 9999;
-  animation: spin 1s linear infinite;
+}
+
+.loader {
+  width: 100%;
+  height: 100%;
+  opacity: 0.3;
+  animation: spin 2s linear infinite;
 }
 
 @keyframes spin {
   100% {
-    transform: translate(-50%, -50%), rotate(360);
+    transform: rotate(360deg);
   }
 }
